<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1C1C"
    tools:context=".RegisterHero">

    <EditText
        android:id="@+id/editNome"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/editNome"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editCodinome"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/editCodinome"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNome"
        app:layout_constraintVertical_bias="0.05"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editEspecie"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/editEspecie"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCodinome"
        app:layout_constraintVertical_bias="0.057"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editHabilidade"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/editHabilidade"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEspecie"
        app:layout_constraintVertical_bias="0.079"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editVulnerabilidade"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/editVulnerabilidade"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editHabilidade"
        app:layout_constraintVertical_bias="0.111"
        android:autofillHints="" />

    <RadioGroup
        android:id="@+id/rdAcesso"
        android:layout_width="67dp"
        android:layout_height="62dp"
        android:background="#00101010"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editVulnerabilidade"
        app:layout_constraintVertical_bias="0.244">

        <RadioButton
            android:id="@+id/rb0"
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:text="@string/rb0"
            android:textColor="#F6F4F4"
            android:textColorHint="#FFFFFF" />

        <RadioButton
            android:id="@+id/rb10"
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:text="@string/rb10"
            android:textColor="#F1EAEA" />

    </RadioGroup>

    <TextView
        android:id="@+id/textAcesso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textAcesso"
        android:textColor="#F3EDED"
        app:layout_constraintBottom_toTopOf="@+id/rdAcesso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editHabilidade"
        app:layout_constraintVertical_bias="0.931" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button2"
        android:onClick="Register"
        android:text="@string/btnRegister"
        android:textColor="#EFEAEA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdAcesso"
        app:layout_constraintVertical_bias="0.232" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button2"
        android:onClick="Back"
        android:text="@string/btnBack"
        android:textColor="#EFEAEA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
        app:layout_constraintVertical_bias="0.246" />

    <TextView
        android:id="@+id/textNull"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#9F0404"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdAcesso"
        app:layout_constraintVertical_bias="0.245" />

</androidx.constraintlayout.widget.ConstraintLayout>