<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2E2A2A"
    tools:context=".SucessoHero">

    <TextView
        android:id="@+id/textSucessoHero"
        android:layout_width="251dp"
        android:layout_height="93dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/textSucessoHero"
        android:textAlignment="center"
        android:textColor="#F4F3F3"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />

    <TextView
        android:id="@+id/textHero"
        android:layout_width="201dp"
        android:layout_height="310dp"
        android:fontFamily="sans-serif-condensed"
        android:textAlignment="center"
        android:textColor="#F8F6F6"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSucessoHero"
        app:layout_constraintVertical_bias="0.375" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button2"
        android:onClick="Back"
        android:text="@string/btnBack"
        android:textColor="#F6F1F1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHero"
        app:layout_constraintVertical_bias="0.088" />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button2"
        android:onClick="BackMain"
        android:text="@string/btnBackMain"
        android:textColor="#F8F3F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack"
        app:layout_constraintVertical_bias="0.412" />

    <ImageView
        android:id="@+id/imageCheck"
        android:layout_width="73dp"
        android:layout_height="64dp"
        android:contentDescription="@string/imageCheck"
        app:layout_constraintBottom_toTopOf="@+id/textHero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSucessoHero"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/tick" />
</androidx.constraintlayout.widget.ConstraintLayout>